@@ -38,6 +38,7 @@
 		"?Death_Counter",
 		"?Decu",
 		"?default-wait-conditions",
+		"?DeleteAdjacentChunk",
 		"?DeleteEmptyChunks",
 		"?diplomacy",
 		"?DoingThingsByHand",
