@@ -3,6 +3,7 @@ Version: 1.11.12
 Date: 2021.09.27
   Changes:
     - Supports Clock
+    - Supports Delete Adjacent Chunk
 ---------------------------------------------------------------------------------------------------
 Version: 1.11.11
 Date: 2021.09.27
